Issue #325
